@startuml
class TodoListApplication {
    + @Override start(Stage)
    + static void main
}

class ListWrapper {
    - int index
    - boolean isAdding
    - List<TaskObject> list
    + setIndex(int index)
    + setAdding(boolean adding)
    + setList(List<TaskObject>)
    + int getIndex()
    + boolean getIsAdding()
    + List<TaskObject> getList()
    + addToList()
    + clearList()
    + removeFromList()
    + editDescription()
    + editDueDate()
    + markAsCompleted()
    + markAsIncomplete()
}

class TaskObject {
    - String dueDate
    - String description
    - String status
    + TaskObject(String, String)
    + TaskObject(String, String, String)
    + void setDescription(String)
    + void setDueDate(String)
    + void setStatus(String)
    + String getDueDate()
    + String getDescription()
    + String getStatus()
}

class MainWindowController {
    - File file
    - FileChooser fileChooser
    - int tempIndex
    - ListWrapper listWrapper
    - ObservableList<TaskObject>

    - @FXML Button addNewTaskButton
    - @FXML Button clearListButton
    - @FXML Button editTaskButton
    - @FXML Button loadButton
    - @FXML Button makeTaskCompleteButton
    - @FXML Button makeTaskIncompleteButton
    - @FXML Button removeTaskButton
    - @FXML Button saveButton
    - @FXML Label errorDisplayLabel
    - @FXML RadioButton displayAllRadioButton
    - @FXML RadioButton displayCompletedRadioButton
    - @FXML RadioButton displayIncompleteRadioButton
    - @FXML TableColumn descriptionColumn
    - @FXML TableColumn dueDateColumn
    - @FXML TableColumn isCompletedColumn
    - @FXML TableView tableView
    - @FXML ToggleGroup displayModes

    + @FXML addNewTaskButtonPushed()
    + @FXML editTaskButtonPushed()
    + @FXML makeTaskCompleteButtonPushed()
    + @FXML makeTaskIncompleteButtonPushed()
    + @FXML removeTaskButtonPushed()
    + @FXML clearListButtonPushed()
    + @FXML sortByDateButtonPushed()
    + @FXML displayAllRadioButtonPushed()
    + @FXML displayCompletedRadioButtonPushed()
    + @FXML displayIncompleteRadioButtonPushed()
    + @FXML saveButtonPushed()
    + @FXML loadButtonPushed()
    + File fileAddressFromFileChooserToSave()
    + File fileAddressFromFileChooserToLoad()
    + void initializeListWrapper(ListWrapper)
    - int getIndexOfSelectedItemInTableView()
    - changeScene()
    + initialize()
    + List<TaskObject> displayAllTasksFilterHelper(List<TaskObject>)
    + List<TaskObject> displayCompleteTasksFilterHelper(List<TaskObject>)
    + List<TaskObject> displayIncompleteTasksFilterHelper(List<TaskObject>)
    + saveToLocalDriveHelper(File, List<TaskObject>)
    + List<TaskObject> loadFromLocalDrive(File)

}
class AddEditWindowController {
    - @FXML Button cancelButton
    - @FXML Button doneButton
    - @FXML Label topicLabel
    - @FXML Label clearDateLabel
    - @FXML Label errorDisplayLabel
    - @FXML Label promptDateLabel
    - @FXML TextArea taskDescriptionTextArea
    - @FXML DatePicker taskDueDateDatePicker
    - LocalDate due
    - ListWrapper listWrapper
    - int index

    + @FXML cancelButtonPushed()
    + @FXML doneButtonPushed()
    + @FXML datePickerSelected()
    + boolean descriptionValidator (String)
    - changeScene()
    + initializeListWrapper(ListWrapper)
    + setUpExistedText(String, String)
    + boolean validateDateFormat(String)
    + boolean itemExistingValidation(List<TaskObject>, String, String)
    + initialize()
}

TodoListApplication -- MainWindowController
MainWindowController -- AddEditWindowController
MainWindowController --- ListWrapper
MainWindowController -- TaskObject
AddEditWindowController -- ListWrapper
ListWrapper -- TaskObject
@enduml